<resources>
    <string name="flurry_key">4M7J6TF9WSRSPXNJ5V6H</string>
    <string name="vip_default">ALC</string>
    <string name="url">http://www.rideeze.com</string>
    <string name="splashscreen_file_name">splashscreen_main_arsen_limo</string>
    <string name="app_name_arsen_limo">Arsen Limo</string>
    <string name="app_name_allen_limo">Allen Limo</string>
    <string name="app_customization">Allen Limousine</string>
    <string name="app_name_sandbox">HailMonkeyS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="passengercount">Number of Passengers</string>
    <string name="inputmethod">Input Method</string>
    <string name="searchradius">Search Radius</string>
    <string name="units">Units</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="notavailable">Unavailable</string>
    <string name="statusText">If you have a VIP code please tap on Yes,otherwise tap on NO</string>
    <string name="yesText">Yes</string>
    <string name="yesMsgText">I have a VIP code</string>
    <string name="noText">No</string>
    <string name="noMsgText">I do not have a VIP code</string>
    <string name="resetPassCompLink">Reset Pass->Company link</string>
    <string name="flighttext">Use the optiors below to find your flight, so we can advise you and your driver of any delays.</string>
    <string name="searchByFlightNo">Search by Flight Number</string>
    <string name="SearchByRout">Search by Route</string>
    <string name="tankyouMsg">Thank you for using RideEze for your transportation needs.A receipt will be mailed to you at </string>
    <string name="tankyouMsglng">\n\nDon\'t forget to <u><a href="activity_b://com.passengerapp.main.RateActivity">Rate</a></u> your driver! \n\nTo write a review go to settings and tap on Write Review in My Trips tab.</string>
    <string name="common_YES">YES</string>
    <string name="common_NO">NO</string>
    <string name="common_Decline">Decline</string>
    <string name="common_OK">OK</string>
    <string name="common_back">Back</string>
    <string name="common_next">Next</string>
    <string name="common_done">Done</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_accept">I accept</string>
    <string name="common_alert">Alert</string>
    <string name="common_warning">Warning</string>
    <string name="common_search">Search</string>
    <string name="common_book">Book</string>
    <string name="common_date">Date</string>
    <string name="common_please_wait_3_point">Please wait...</string>
    <string name="common_no_internet_connections_after_smth">There is no Internet Connection. Please try after sometimes</string>
    <string name="common_no_current_location">Can\'t detect your current location.</string>
    <string name="common_gps_ask_to_enable_msg">Please enable Location Services and GPS</string>
    <string name="common_gps_ask_to_enable_title">Location Services Not Active</string>
    <string name="request_getflightdetails_success">GetFlightdetailes Success</string>
    <string name="request_getflightdetails_failed">GetFlightdetailes failed</string>
    <string name="request_resetcompanylinks">ReSetting CompanyLink!</string>
    <string name="request_getting_pickup">Getting Pickup!</string>
    <string name="request_getpickup_failed">GetPickup failed</string>
    <string name="request_getpickup_success">GetPickup Success</string>
    <string name="companylink_setting_companylink">Setting CompanyLink!</string>
    <string name="companylink_congrat_vip_registred">Congratulations! you are now registered as a VIP user.</string>
    <string name="companylink_vipcode_not_valid">The VIP code you entered is not valid.\nPlease Try again.</string>
    <string name="companylink_please_provide_name">Please provide your name</string>
    <string name="companylink_please_provide_email">Please provide your email</string>
    <string name="companylink_Invalid_Email_Address">Invalid Email Address</string>
    <string name="companylink_Please_provide_your_phone_no">Please provide your phone no.</string>
    <string name="companylink_Please_provide_your_VIP_code">Please provide your VIP code.</string>
    <string name="routeactivity_error_load_google_map">An error occured loading Google Map. Please retry Again!</string>
    <string name="routeactivity_route">Route</string>
    <string name="mainactivity_location_service_not_detect">Location Service is not detected. Press OK to activate Location Service!</string>
    <string name="mainactivity_undefinied"></string>
    <string name="alertdialog_vehicle_has_arrived">Your vehicle has arrived.</string>
    <string name="alertdialog_time_later_request_processed">Your request has been processed. You will receive a confirmation email, in addition to this notice.</string>
    <string name="alertdialog_vehicle_arrive_your">Your</string>
    <string name="alertdialog_vehicle_arrive">has arrived.</string>
    <string name="rateactivity_please_enter_your_comments">Please enter your comments.</string>
    <string name="rateactivity_have_no_select_any_driver">You have not select any driver.</string>
    <string name="flightlist_tap_on_your_flight">Please tap on your flight in list</string>
    <string name="flightlist_select_your_airport">please select proper airport and airline codes</string>
    <string name="flightlist_departing">Departing</string>
    <string name="flightlist_arriving">Arriving</string>
    <string name="flightlist_airport">Airport:</string>
    <string name="flightlist_date">Date:</string>
    <string name="flightlist_airline_number_col">Airline\nFlight Number</string>
    <string name="flightlist_status_col">Status</string>
    <string name="flightlist_departure_time_col">Departure\nTime</string>
    <string name="flightlist_arrival_time_col">Arrival\nTime</string>
    <string name="detailed_special_instructions">Special Instructions:</string>
    <string name="detailed_have_no_pickups">You have no pickups.</string>
    <string name="detailed_toast_msg_select_your_trip">please select your trip route</string>
    <string name="detailed_call_company_office">CALL COMPANY OFFICE</string>
    <string name="detailed_flight_info">FLIGHT INFO</string>
    <string name="detailed_call_my_driver">CALL MY DRIVER</string>
    <string name="flight_detail_pick_me_at">Pick up me at</string>
    <string name="utils_gps_signal_good">Good</string>
    <string name="utils_gps_signal_average">Average</string>
    <string name="utils_gps_signal_fair">Fair</string>
    <string name="utils_gps_signal_bad">Bad</string>
    <string name="utils_gps_signal_no_signal">No signal</string>
    <string name="popup_instruction_get_quotes_main_text">Select your ride by tapping on your choice in this list.</string>
    <string name="popup_instruction_get_quotes_checkbox">Do not display the message again</string>
    <string name="history_list_date_column">DATE</string>
    <string name="history_list_dropoff_column">DROP OFF</string>
    <string name="history_list_amaunt_column">AMOUNT</string>
    <string name="flight_info_dialog_ask_notified_flight">Would you like to be automaticaly notified of any gate changes or flight delays? \n\n if so,tap on yes and follow the prompts.</string>
    <string name="pick_up_taxi_dialog_review">Reviews</string>
    <string name="pick_up_taxi_dialog_terms_and_condition">Terms and Conditions</string>
    <string name="pick_up_taxi_dialog_cancel_fees_sedan">Cancellation Fees for Sedans</string>
    <string name="pick_up_taxi_dialog_cancel_fees_limo">Cancellation Fees for Limos and Buses</string>
    <string name="pick_up_taxi_dialog_no_show_charge">No Show Charges</string>
    <string name="pick_up_taxi_dialog_other">Oher</string>
    <string name="pick_up_taxi_dialog_select_destenation">Please Select a Destination.</string>
    <string name="register_passenger_provide_name">Please provide your name</string>
    <string name="register_passenger_provide_phone">Please provide your phone no</string>
    <string name="register_passenger_provide_email">Please provide your Email.</string>
    <string name="register_passenger_invalid_email">Invalid Email Address</string>
    <string name="register_passenger_provide_credit_card">Please input your Credit Card data in the Next view. Your card will not Charged until you authorize payment at end of trip.</string>
    <string name="register_passenger_vehicle_not_available">We are sorry to inform you that the vehicle you have selected is no longer available. Please select another vehicle.</string>
    <string name="register_passenger_request_is_processed">Your reservation is confirmed.  Your confirmation number is %s.  You can make modifications in My Trips.</string>
    <string name="register_passenger_not_want_accept_deposite">Not want to accept deposite Amount</string>
    <string name="register_passenger_request_is_processed_email">Your request for a pickup for "date" has processed and you will be receiving an email with further details. A non-refundable deposit of %1$s will be charged to your stored credit card.</string>
    <string name="register_passenger_request_for_later">Your Confirmation ID is %1$s .  You may modify in My Trips.</string>
    <string name="set_credit_card_dialog_hint_name_on_card">Name on the card</string>
    <string name="set_credit_card_dialog_setting_creditcar">Setting CreditCardData!</string>
    <string name="set_credit_card_dialog_card_not_accepted">Your card was not accepted. Please try again</string>
    <string name="set_credit_card_dialog_card_was_added">Your card was added to your account.</string>
    <string name="set_credit_card_dialog_provide_firstname">Please provide your firstname</string>
    <string name="set_credit_card_dialog_provide_lastname">Please provide your lastname</string>
    <string name="set_credit_card_dialog_provide_cardtype">Please provide your cardtype.</string>
    <string name="set_credit_card_dialog_invalid_card_visa">Invalid Visa Card</string>
    <string name="set_credit_card_dialog_invalid_card_master">Invalid Master Card</string>
    <string name="set_credit_card_dialog_invalid_card_discover">Invalid Discover Card</string>
    <string name="set_credit_card_dialog_invalid_card_american">Invalid American Express Card</string>
    <string name="set_credit_card_dialog_invalid_card">Invalid Card Number</string>
    <string name="set_destination_dialog_current_location">Current Location</string>
    <string name="set_destination_dialog_please_enter_current_location">Please enter Current Location.</string>
    <string name="activity_flight_instruction_title">Please enter Airline and Flight number below</string>
    <string name="activity_flight_departure_optional_hint">Departing From (opitonal)</string>
    <string name="activity_flight_arrival_optional_hint">Going To (Optional)</string>
    <string name="activity_flight_airline_hint">Airline</string>
    <string name="activity_flight_flight_number_hint">Flight Number</string>
    <string name="activity_flight_instruction_for_driver">Special instructions for driver</string>
    <string name="activity_flight_instruction_for_driver_selected_flight_number">Selected Flight Number:</string>
    <string name="activity_flight_instruction_for_driver_car_service_baggage_area">Meet me at the Baggage area</string>
    <string name="activity_flight_instruction_for_driver_car_service_limo_pickup">Meet me curbside at the limo pickup area</string>
    <string name="activity_flight_instruction_for_driver_taxi_taxi_pickup">Meet me curbside at the taxi pickup area</string>
    <string name="activity_flight_back_to_quotes_list">GO BACK TO QUOTES LIST</string>
    <string name="activity_flight_verify_btn">VERIFY</string>
    <string name="activity_flight_send_btn">SEND</string>
    <string name="activity_flight_tap_on_above">Tap on above to verify flight</string>
</resources>